recursion.logo.lessons.recursion.logo.polygonfractal.PolygonFractal.scala.error
PolygonFractal:5: error: not found: value shink
    polygonFractal(levels-1, sides, length*shink, shrink)
                                           ^